--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: vecplyr
 Type: Package
-Title: What the Package Does (Title Case)
+Title: A dplyr-like package for vectors
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: viturovski
+Maintainer: viturovski <viturivituri@gmail.com>
+Description: A dplyr-like package for vectors
+License: pode compartilhar
 Encoding: UTF-8
 LazyData: true
 Depends: dplyr,
