--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,9 @@ Version: 0.1.0
 Author: viturovski
 Maintainer: viturovski <viturivituri@gmail.com>
 Description: A dplyr-like package for vectors
-License: pode compartilhar
+License: GPL
 Encoding: UTF-8
 LazyData: true
-Depends: dplyr,
-  purrr
+Depends: magrittr
+Imports: purrr
 RoxygenNote: 7.2.0
